# phenoplier-cli

./: .gitbook.yaml  .gitignore  LICENSE  LICENSE.md  README (1).md  README.md  SUMMARY.md  environment.yml  internal_settings.toml  pyproject.toml
.github/workflows/: main.yml
data/phenomexcan/: UKB_Data_Dictionary_Showcase.tsv  gtex_gwas_phenotypes_metadata.tsv
data/phenomexcan/genes_metadata/: genes_mapping_id_to_name.pkl  genes_mapping_name_to_id.pkl
doc/: README.md  SUMMARY.md  gene-corr-dataflow.excalidraw  lv-trait-regression.md
doc/development/: environment-setup.md  package-publishing.md
doc/gene-gene-correlation-matrix-computation/: 1.-compute-covariance.md  2.-preprocess.md  3.-predict-correlation.md  4.-postprocess.md  5.-create-within-distance-matrices.md  6.-generatec-correlation-matrices-per-lv.md  gene-gene-correlation.md
doc/getting-started/: data-preparation.md  installation.md  project-configuration.md
doc/testing/: run-provided-testing-suites.md
docs/source/: conf.py  data-projection.rst  index.rst  introduction.rst  lv-trait-regression.rst
docs/source/development/: environment-setup.rst  index.rst  package-publishing.rst
docs/source/gene-gene-correlation-matrix-computation/: index.rst  step1-compute-covariance.rst  step2-preprocess.rst  step3-predict-correlation.rst  step4-postprocess.rst  step5-create-filtered-matrices.rst  (+1 more)
docs/source/qa/: index.rst  (+1 more)
nbs/: t21-iter1.ipynb
nbs/data/: PhenomeXcan S-MultiXcan.tsv
nbs/null_simulations/: _config.toml  readme.md
nbs/t21_paper/: t21-iter1.ipynb
phenoplier/: __init__.py  __main__.py  cache.py  cli.py  cli_constants.py  conf.py  config.py  constants.py  core.py  data.py  entity.py  gls.py  gls_cli.py  log.py  marc_model_z.pkl  modelz.py  multiplier.py  readers.py  script2.sh  script4_combine.py  scripts.sh  scripts3.py  test.py  utils.py
phenoplier/commands/: activate.py  enums.py  export.py  get.py  init.py  invoker.py  project.py  regression.py  run.py  settings.py  utils.py
phenoplier/constants/: arg.py  cli.py  message.py
phenoplier/libs/: conf.py  drug_disease.py  entity.py  gls.py  log.py  multiplier.py  settings.py
phenoplier/templates/: internal_settings.toml  phenoplier_settings.toml  user_settings.py  user_settings.toml
phenoplier/utils/: config_manager.py
scripts/: compute_corr_mats.sh  create_unit_modelz.py  dev_setup.sh  init.sh  parallel_gls.py  script4_combine.py  script5_merge.py  scripts.sh  setup_data.py  setup_dev.sh  setup_env.sh
scripts/dev/: setup_dev_env.sh
src/: cli.py  main.py
src/constants/: messages.py
src/phenoplier/: __main__.py  cli.py  config.py
test/: __init__.py  common.py  temp.sh  test_common.py  test_utils.py  utils.py
test/settings/: internal_settings.toml  phenoplier_settings.toml
test/unittest/: cli.py  test_cache.py  test_cli.py  test_constants.py  test_correlations.py  test_gene.py  test_load_settings0.toml  test_load_settings1.toml  test_multiplier.py  test_predict_gene_expression.py  test_trait.py  test_utils.py
(+6141 files in other folders)
