[tool.poetry]
name = "phenoplier"
version = "0.1.6"
description = ""
authors = ["Haoyu Zhang"]
license = "BSD-2-Clause Plus Patent License"
readme = "README.md"


# Todo: constrain the version of the dependencies except for python to avoid breaking changes
[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.12"
rich = "^13.7"
pytest = "^8.1"
pandas = "^2.2"
scipy = "^1.13"
statsmodels = "^0.14"
scikit-learn = "^1.4"
ipython = "^8.24"
fastparquet = "^2024"
tomlkit = "^0.12"
dynaconf = "^3.2.5"
numpy = "1.26.*"
pytest-dependency = "0.6.*"
pyyaml = "6.0.*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = [
  "./", "./phenoplier/"
]
