[tool.poetry]
name = "phenoplier"
version = "0.1.8"
description = ""
authors = ["Milton Pividori", "Haoyu Zhang"]
license = "BSD-2-Clause Plus Patent License"
readme = "README.md"

# Todo: constrain the version of the dependencies except for python to avoid breaking changes
[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.12"
rich = "^13.7"
pytest = "^8.1"
pandas = "^2.2"
scipy = "^1.13"
statsmodels = "^0.14"
scikit-learn = "^1.4"
ipython = "^8.24"
fastparquet = "^2024"
tomlkit = "^0.12"
dynaconf = "^3.2.5"
numpy = "1.26.*"
pytest-dependency = "0.6.*"
pyyaml = "6.0.*"
coverage = "7.5.*"
pytest-env = "^1.1"
tqdm = "4.66.4"
seaborn = "0.12.*"
matplotlib = "3.6.*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
phenoplier = "phenoplier.__main__:main"

[tool.pytest.ini_options]
pythonpath = "."
env = [
    "ENV_FOR_DYNACONF = test",
    "ROSETTA = rosetta/main"
]