[tool.poetry]
name = "phenoplier"
version = "0.2.4a6"
description = ""
authors = ["Milton Pividori", "Haoyu Zhang"]
license = "BSD-2-Clause Plus Patent License"
readme = "README.md"

[tool.poetry.dependencies]
coverage = "7.5.*"
dynaconf = "^3.2.5"
dxpy = "^0.383"
fastparquet = "^2024"
ipython = "^8.24"
h5py = "^3.8"
matplotlib = "3.6.*"
numpy = "1.26.*"
openpyxl = "^3.1"
pandas = "^2.2"
pyyaml = "6.0.*"
pytest = "^8.1"
pytest-dependency = "0.6.*"
pytest-env = "^1.1"
pytest-order = "^1.2"
python = "3.12.4"
rich = "^13.7"
scikit-learn = "^1.4"
scipy = "^1.13"
seaborn = "0.12.*"
sphinx = "^8.1.2"
statsmodels = "^0.14"
tables = "3.9.*"
tomlkit = "^0.12"
tqdm = "4.66.4"
typer = "^0.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
phenoplier = "phenoplier.__main__:main"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "ERROR"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
markers = [
    "corr: Tests for the gene-gene correlation matrix generation",
]
pythonpath = "."
env = [
    "ENV_FOR_DYNACONF = test",
    "ROSETTA = rosetta/main"
]
